# hyprland-keyboard-layout-daemon

./: Cargo.toml  README.md
src/: layout.rs  main.rs
