[package]
name = "layout-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["net", "io-util", "macros", "rt"] }
tokio-stream = "0.1"
log = "0.4"
systemd-journal-logger = "2.1.1"
